# chip-8

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Emulator.h  Font.h
source/: Emulator.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: Emulator.cpp
